# rs_rdf_worker

./: .env.dist  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md
.github/: dependabot.yml
examples/: message.json
src/: config.rs  convert.rs  main.rs  message.rs  namespaces.rs  perfect_memory.rs  rdf_graph.rs
src/files_model/: mod.rs
src/model/: category.rs  channel.rs  image.rs  metadata.rs  mod.rs  people.rs  platform.rs  platforms.rs  role.rs  text_track.rs
src/resource_model/: mod.rs
src/video_model/: audio_track.rs  category.rs  channel.rs  country.rs  format.rs  group.rs  image.rs  kind.rs  metadata.rs  mod.rs  part.rs  people.rs  platform.rs  platforms.rs  rating.rs  region.rs  role.rs  tag.rs  text_track.rs  window.rs
tests/: files.json  triples.nt  triples_resource.nt  video.json
