[package]
name = "rdf_worker"
version = "0.1.3"
authors = ["Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>"]

[dependencies]
amqp_worker = "0.4.3"
base64 = "0.10.0"
futures = "0.1.14"
hyper = "0.12"
log = "0.4.6"
pretty_env_logger = "0.3"
rdf = "0.1.4"
reqwest = "0.9.5"
uuid = "0.7"
serde = "^1.0"
serde_derive = "^1.0"
serde_json= "^1.0"
simple_logger = "1.0.1"
