[package]
name = "rdf_worker"
version = "0.1.3"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.0"
clap = "2.33.0"
futures = "0.3"
hyper = "0.12"
log = "0.4.6"
mcai_worker_sdk = "0.11.0"
pretty_env_logger = "0.3"
rdf = "0.1.4"
reqwest = "0.10"
uuid = "0.8"
schemars = "0.7.6"
serde = "^1.0"
serde_derive = "^1.0"
serde_json= "^1.0"
simple_logger = "1.0.1"

[build-dependencies]
built = "0.4.1"
